Fix [Jobs] Columns overflowing each other (#113)

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -146,3 +146,9 @@ input {
     box-shadow: none;
   }
 }
+
+.data-ellipsis {
+  overflow-x: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
